[gd_scene load_steps=2 format=3 uid="uid://yvkew01lgucu"]

[ext_resource type="Script" path="res://scripts/digital_library.gd" id="1_gvkeb"]

[node name="DigitalLibraryGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gvkeb")

[node name="Heading" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -122.0
offset_right = 122.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "DIGITAL LIBRARY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node" type="Node" parent="."]

[node name="book1" type="Button" parent="Node"]
offset_left = 134.0
offset_top = 143.0
offset_right = 464.0
offset_bottom = 227.0
text = "Comic"

[node name="book2" type="Button" parent="Node"]
offset_left = 667.0
offset_top = 138.0
offset_right = 983.0
offset_bottom = 220.0
text = "Short Story"

[node name="Prev" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0

[node name="Next" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0

[node name="BackorContinue" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -15.5
offset_right = 39.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 31
text = "GO BACK"

[connection signal="pressed" from="Node/book1" to="." method="_on_book_1_pressed"]
[connection signal="pressed" from="Node/book2" to="." method="_on_book_2_pressed"]
[connection signal="pressed" from="BackorContinue" to="." method="_on_backor_continue_pressed"]
